--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,8 +113,24 @@ input, select, textarea {
 		border-bottom: dotted 1px;
 		color: #e44c65;
 		text-decoration: none;
+		font-weight: 500;
 	}
 
+	a.dark 
+	{
+		-moz-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		border-bottom: dotted 1px;
+		color: #2b2b2b;
+		text-decoration: none;
+		font-weight: 500;
+	}
+	a:hover.dark {
+		color: #2b2b2b !important;
+		border-bottom-color: transparent;
+	}
 		a:hover {
 			color: #e44c65 !important;
 			border-bottom-color: transparent;
@@ -3860,7 +3876,7 @@ a.icon.style2:active:before {
 
 			#banner {
 				box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
-				min-height: calc(100vh - 44px);
+				/*min-height: calc(100vh - 44px);*/
 			}
 
 				#banner:before {
@@ -3873,6 +3889,22 @@ a.icon.style2:active:before {
 
 					#banner .content header h2 {
 						font-size: 1.5em;
+						text-align: center;
+						padding-top: 4%;
+					}
+
+					#banner .content header p {
+						text-align: center;
+					}
+					#banner .content header p br {
+						display: block;
+					}
+
+					#banner .content header ul.icons {
+						text-align: center;
+					}
+					#banner .content header ul.icons li {
+						padding-right: 4%;
 					}
 
 					#banner .content .image {
@@ -3882,7 +3914,7 @@ a.icon.style2:active:before {
 
 		/* Nav */
 
-			#page-wrapper {
+			/*#page-wrapper {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
@@ -4060,7 +4092,7 @@ a.icon.style2:active:before {
 				-webkit-transform: translateX(0);
 				-ms-transform: translateX(0);
 				transform: translateX(0);
-			}
+			}*/
 
 		/* Footer */
 
@@ -4112,6 +4144,10 @@ a.icon.style2:active:before {
 		/* Banner */
 
 			#banner .content {
+				padding: 3em 1.5625em 5.25em 1.5625em;
+			}
+
+			#banner h2 {
 				padding: 3em 1.5625em 5.25em 1.5625em;
 			}
 
