--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4143,13 +4143,52 @@ a.icon.style2:active:before {
 
 		/* Banner */
 
-			#banner .content {
-				padding: 3em 1.5625em 5.25em 1.5625em;
-			}
 
-			#banner h2 {
-				padding: 3em 1.5625em 5.25em 1.5625em;
+
+			#banner {
+				box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
+				/*min-height: calc(100vh - 44px);*/
 			}
+				
+				#banner:before {
+					height: calc(100vh - 44px);
+				}
+				
+				#banner h2 {
+					padding: 3em 1.5625em 5.25em 1.5625em;
+				}
+				
+
+
+				#banner .content {
+					padding: 3em 1.5625em 5.25em 1.5625em;
+				}
+
+					#banner .content header h2 {
+						font-size: 1.5em;
+						text-align: center;
+						padding-top: 1%;
+					}
+
+					#banner .content header p {
+						text-align: center;
+					}
+						#banner .content header p br {
+							display: block;
+						}
+
+					#banner .content header ul.icons {
+						text-align: center;
+					}
+						
+						#banner .content header ul.icons li {
+							padding-right: 4%;
+						}
+
+					#banner .content .image {
+						height: 9em;
+						width: 9em;
+					}
 
 		/* Footer */
 
