Add more changes to mobile version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4155,7 +4155,7 @@ a.icon.style2:active:before {
 				}
 				
 				#banner h2 {
-					padding: 3em 1.5625em 5.25em 1.5625em;
+					/*padding: 3em 1.5625em 5.25em 1.5625em;*/
 				}
 				
 
