--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3792,6 +3792,19 @@ a.icon.style2:active:before {
 						margin: 0;
 					}
 
+					#banner .content header h2 {
+						font-size: 2em;
+						text-align: center;
+						padding-top: 2%;
+					}
+	
+					#banner .content header p {
+						text-align: center;
+					}
+						#banner .content header p br {
+							display: block;
+						}
+
 		/* Footer */
 
 			#footer {
