--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3814,7 +3814,7 @@ a.icon.style2:active:before {
 
 	}
 
-/* Small */
+/* Small - Smallest browser in PC*/
 
 	#navPanel, #titleBar {
 		display: none;
@@ -3906,8 +3906,8 @@ a.icon.style2:active:before {
 		/* Banner */
 
 			#banner {
-				box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
-				min-height: calc(100vh - 44px);
+				/*box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);*/
+				/*min-height: calc(100vh - 44px);*/
 			}
 
 				#banner:before {
@@ -3915,9 +3915,22 @@ a.icon.style2:active:before {
 				}
 
 				#banner .content {
-					padding: 4.0625em 1.5em 4.875em 1.5em;
+					/*padding: 4.0625em 1.5em 4.875em 1.5em;*/
 				}
 
+
+
+					#banner .content {
+						padding: 0px;
+						margin: 0px;
+						border: 0px;
+					}
+
+					#banner .content header {
+							padding: 0px;
+							margin: 0px;
+							border: 0px;
+					}
 					#banner .content header h2 {
 						font-size: 1.5em;
 						text-align: center;
@@ -3933,9 +3946,8 @@ a.icon.style2:active:before {
 
 					#banner .content header ul.icons {
 						text-align: center;
-					}
-					#banner .content header ul.icons li {
-						padding-right: 4%;
+						padding-top: 4%;
+						display: inline-block;
 					}
 
 					#banner .content .image {
@@ -4124,7 +4136,7 @@ a.icon.style2:active:before {
 				-ms-transform: translateX(0);
 				transform: translateX(0);
 			}*/
-
+			
 		/* Thanks Note */					
 		.container header p br {
 			display: block;
@@ -4137,7 +4149,7 @@ a.icon.style2:active:before {
 
 	}
 
-/* XSmall */
+/* XSmall - Most Mobiles*/
 
 	@media screen and (max-width: 480px) {
 
