Add holy hell's page (incomplete)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,6 +148,10 @@ input, select, textarea {
 	p {
 		margin: 0 0 2em 0;
 	}
+	
+	p.subtitle {
+		white-space: pre-wrap;
+	}
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
@@ -227,12 +231,13 @@ input, select, textarea {
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
-		font-size: 0.9em;
+
 		margin: 0 0 2em 0;
 	}
 
 		pre code {
+			font-family: "Courier New", monospace;
+			font-size: 0.9em;
 			display: block;
 			line-height: 1.75em;
 			padding: 1em 1.5em;
@@ -2649,6 +2654,26 @@ a.icon.style2:active:before {
 					font-size: 2em;
 				}
 
+/* Roles */
+	ul.roles li p {
+		padding-left: 2em;
+	}
+
+/* Game-info */
+
+	ul.game-info {
+		cursor: default;
+		list-style: none;
+		padding-left: 0;
+		margin-left: 0;
+		border-left: 0;
+	}
+		ul.game-info  li {
+			display: block;
+			height: 2.5em;
+			line-height: 2.5em;
+			padding: 0.5em 1 0.5em 0;
+		}
 /* Actions */
 
 	ul.actions {
@@ -3396,13 +3421,13 @@ a.icon.style2:active:before {
 
 	#header {
 		/*background: rgba(39, 40, 51, 0.965);*/
-		background: rgba(53, 53, 53, 0.965);
-		box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
+		background: rgba(32, 32, 32, 0.965) !important;
+		box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.35);
 		cursor: default;
 		height: 3.5em;
 		left: 0;
 		line-height: 3.5em;
-		position: fixed;
+		position: fixed !important;
 		top: 0;
 		width: 100%;
 		z-index: 100;
@@ -3549,6 +3574,20 @@ a.icon.style2:active:before {
 					display: inline-block;
 				}
 
+				#banner .content header ul.icons {
+					text-align: left;
+					padding-top: 4%;
+					/*display: inline-flex;*/
+					min-width: 400px;
+					list-style: none;
+				}
+	
+					
+					#banner .content header ul.icons li {
+						display: inline;
+						padding-right: 2%;
+					}
+
 			#banner .content .image {
 				border-radius: 100%;
 				display: inline-block;
@@ -3636,6 +3675,19 @@ a.icon.style2:active:before {
 				font-size: 13pt;
 			}
 
+			#banner .content header ul.icons {
+				text-align: left;
+				padding-top: 4%;
+				/*display: inline-flex;*/
+				min-width: 400px;
+				list-style: none;
+			}
+
+				
+				#banner .content header ul.icons li {
+					display: inline;
+					padding-right: 2%;
+				}
 	}
 
 /* Large */
@@ -3790,13 +3842,18 @@ a.icon.style2:active:before {
 						
 						#banner .content header ul.icons {
 							text-align: center;
-							padding: 0%;
-
+							padding-top: 4%;
+							/*display: inline-flex;*/
+							min-width: 400px;
+							list-style: none;
 						}
+	
 							
 							#banner .content header ul.icons li {
+								display: inline;
 								padding-right: 2%;
 							}
+							
 
 							#banner .content .image {
 								height: 13em;
@@ -3906,7 +3963,7 @@ a.icon.style2:active:before {
 		/* Banner */
 
 			#banner {
-				/*box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);*/
+				box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
 				/*min-height: calc(100vh - 44px);*/
 			}
 
@@ -3914,9 +3971,9 @@ a.icon.style2:active:before {
 					height: calc(100vh - 44px);
 				}
 
-				#banner .content {
-					/*padding: 4.0625em 1.5em 4.875em 1.5em;*/
-				}
+				/*#banner .content {
+					padding: 4.0625em 1.5em 4.875em 1.5em;
+				}*/
 
 
 
@@ -3947,8 +4004,16 @@ a.icon.style2:active:before {
 					#banner .content header ul.icons {
 						text-align: center;
 						padding-top: 4%;
-						display: inline-block;
+						/*display: inline-flex;*/
+						min-width: 400px;
+						list-style: none;
 					}
+
+						
+						#banner .content header ul.icons li {
+							display: inline;
+							padding-right: 2%;
+						}
 
 					#banner .content .image {
 						height: 9em;
@@ -4201,9 +4266,9 @@ a.icon.style2:active:before {
 					height: calc(100vh - 44px);
 				}
 				
-				#banner h2 {
-					/*padding: 3em 1.5625em 5.25em 1.5625em;*/
-				}
+				/*#banner h2 {
+					padding: 3em 1.5625em 5.25em 1.5625em;
+				}*/
 				
 
 
