--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2587,6 +2587,34 @@ a.icon.style2:active:before {
 				width: 100%;
 			}
 
+
+/* Video */
+
+.video.fit {
+	display: block;
+	margin: 0 0 2em 0;
+	width: 100%;
+}
+
+	.video.fit video {
+		width: 100%;
+	}
+
+.video.embed.fit {
+	position: relative;
+	width: 100%;
+	padding-bottom: 56.25%; 
+	height: 0;
+}
+
+.video.embed.fit iframe{
+	position: absolute;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  }
+
 /* List */
 
 	ol {
@@ -3442,6 +3470,28 @@ a.icon.style2:active:before {
 			top: 0;
 		}
 
+		#header .goto-previous {
+			background-image: url("images/arrow.svg");
+			background-repeat: no-repeat;
+			background-size: contain;
+			transform: rotate(90deg);
+			border: 0;
+			bottom: 0;
+			height: inherit;
+			line-height: inherit;
+			margin: 0;
+			left: 2%;
+			overflow: hidden;
+			position: absolute;
+			text-indent: 10em;
+			width: 2em;
+			height: 0.7em;
+			top: 50%;
+			vertical-align: baseline;
+			line-height: 1em;
+			z-index: 1;
+		}
+
 		#header nav {
 			position: absolute;
 			right: 1em;
@@ -3953,12 +4003,31 @@ a.icon.style2:active:before {
 			.wrapper {
 				padding: 3.25em 1.5em 1.25em 1.5em;
 			}
-
 		/* Header */
 
 			#header {
-				display: none;
+				/*background: rgba(39, 40, 51, 0.965);*/
+				background: rgba(32, 32, 32, 0.965) !important;
+				box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.35);
+				cursor: default;
+				height: 2.5em;
+				left: 0;
+				line-height: 2.5em;
+				position: fixed !important;
+				top: 0;
+				width: 100%;
+				z-index: 100;
 			}
+		
+				#header h1 {
+					height: inherit;
+					left: 1.25em;
+					line-height: inherit;
+					margin: 0;
+					position: absolute;
+					top: 0;
+					font-size: 0.8em;
+				}
 
 		/* Banner */
 
@@ -4289,18 +4358,25 @@ a.icon.style2:active:before {
 							display: block;
 						}
 
-					#banner .content header ul.icons {
-						text-align: center;
-					}
-						
-						#banner .content header ul.icons li {
-							padding-right: 4%;
+						#banner .content header ul.icons {
+							text-align: center;
+							padding: 0;
+							padding-top: 4%;
+							display: block;
+							min-width: 250px;
+							list-style: none;
 						}
-
-					#banner .content .image {
-						height: 9em;
-						width: 9em;
-					}
+	
+							
+							#banner .content header ul.icons li {
+								display: inline;
+								padding-right: 2%;
+							}
+	
+						#banner .content .image {
+							height: 9em;
+							width: 9em;
+						}
 
 
 		.container header p br {
