--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -78,6 +78,24 @@
 		background-position: top left, center center;
 	}
 
+	/* Three */
+
+	#three {
+		background: url('images/overlay.png'), url('../../images/two.jpg');
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+		/* Thanks-note */
+
+		#thanks-note {
+			background: url('images/overlay.png'), url('../../images/two.jpg');
+			background-size: 256px 256px, cover;
+			background-attachment: fixed, fixed;
+			background-position: top left, center center;
+		}
+
 /* Contact */
 
 	#contact {
