--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2573,7 +2573,7 @@ a.icon.style2:active:before {
 			position: absolute;
 			left: 0;
 			top: 0;
-			background-image: url("images/overlay.png");
+			/*background-image: url("images/overlay.png");*/
 			width: 100%;
 			height: 100%;
 			z-index: 1;
