Update projects style; ;Update many pages; Tweak visuals.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,6 +252,13 @@ p.subtitle {
 	white-space: pre-wrap;
 }
 
+p.details {
+	position: absolute;
+	bottom: 0;
+	white-space: normal;
+	font-size: 50%;
+}
+
 h1,
 h2,
 h3,
@@ -3235,6 +3242,10 @@ input[type="button"]:disabled,
 	position: relative;
 }
 
+.spotlight.small {
+	height: 60vh;
+}
+
 .spotlight:nth-last-of-type(1) {
 	z-index: 1;
 }
@@ -6125,7 +6136,7 @@ body.is-preload .gallery.onload-fade-in article .image2 img {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.8);
 	opacity: 0;
 	padding: 3rem;
 	z-index: 1;
@@ -6371,7 +6382,7 @@ body.is-preload .gallery.onload-fade-in article .image2 img {
 	overflow: hidden;
 	position: relative;
 	width: 25%;
-	height: 150px;
+	height: 250px;
 }
 
 .gallery.style3 article .image2 {
@@ -6421,7 +6432,7 @@ body.is-preload .gallery.onload-fade-in article .image2 img {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.8);
 	opacity: 0;
 	padding: 2rem;
 	z-index: 1;
@@ -7033,8 +7044,8 @@ body.is-touch .poptrox-popup .closer {
 	transform: translateX(0);
 	overflow: hidden;
 	position: relative;
-	max-width: 50%;
-	max-height: 200px;
+	max-width: 33%;
+	max-height: 100%;
 	/*max-width: 50%;
 			max-height: 200px;*/
 	opacity: 1.0;
@@ -7054,6 +7065,7 @@ body.is-touch .poptrox-popup .closer {
 	width: 100%;
 	height: 100%;
 }
+
 .gallery2 article .gif img {
 	display: block;
 	object-fit: cover;
@@ -7440,7 +7452,7 @@ body.is-touch .poptrox-popup .closer {
 		max-width: 100%;
 	}
 
-	
+
 	/* Gallery3 */
 
 	.gallery3 {
