--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,6 +252,12 @@ p.subtitle {
 	white-space: pre-wrap;
 }
 
+p.small {
+	font-size: 65%;
+	line-height:22px;
+}
+
+
 p.details {
 	position: absolute;
 	bottom: 0;
@@ -3237,7 +3243,7 @@ input[type="button"]:disabled,
 	background-position: center center;
 	background-size: cover;
 	box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
-	height: 120vh;
+	height: 140vh;
 	overflow: hidden;
 	position: relative;
 }
