--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3842,7 +3842,7 @@ body.landing #header {
 #banner {
 	background-attachment: fixed;
 	background-color: #303030;
-	/* background-image: url("../../images/gradient.jpg"); */
+	background-image: url("../../images/banner-1-bw.png");
 	background-position: center center;
 	background-size: cover;
 	box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
