--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4063,7 +4063,7 @@ body.is-touch #banner {
 
 	.spotlight.left .content,
 	.spotlight.right .content {
-		padding: 4.5em 2.5em;
+		padding: 4.5em 0 2.5em 0;
 		width: 25em;
 	}
 
@@ -4142,15 +4142,20 @@ body.is-touch #banner {
 	}
 
 	.spotlight .image.main {
-		display: block;
-		margin: 0;
+		margin: auto;
+		display: flex;
+ 		justify-content: center;
+		/* display: block;
+		margin: 0; */
+		max-width: 99%;
 		max-height: 60vh;
+		align-items: center;
 		overflow: hidden;
 	}
 
 	.spotlight .image.main img {
-		width: 200%;
-		left: -50%;
+		width: 100%;
+		/* left: -50%; */
 	}
 
 	.spotlight .content {
